fixed spacing and font sizes

--- a/FilmArchive.WebUI/ClientApp/src/app/components/entry/entry.component.less
+++ b/FilmArchive.WebUI/ClientApp/src/app/components/entry/entry.component.less
@@ -20,7 +20,7 @@
 
     img {
       width: 100vw;
-      max-width: 425px;
+      max-width: 900px;
       margin-bottom: @xSmallSpacer;
     }
 
@@ -52,7 +52,7 @@
 
     background-color: white;
 
-    transform: translateY(92px);
+    transform: translateY(189px);
     .transition(@ease-out);
 
     &:hover {
@@ -70,12 +70,6 @@
 
     h3 {
       margin-bottom: @smallSpacer;
-    }
-  }
-
-  @media screen and (max-width: 350px) {
-    .caption {
-      transform: translateY(71px);
     }
   }
 }
