--- a/FilmArchive.WebUI/ClientApp/src/app/components/nav-bar/nav-bar.component.less
+++ b/FilmArchive.WebUI/ClientApp/src/app/components/nav-bar/nav-bar.component.less
@@ -11,7 +11,7 @@ header {
   align-items: center;
   justify-content: space-between;
 
-  padding: @mediumSpacer;
+  padding: @xLargeSpacer;
 
   box-shadow: 0px 0px 50px hsla(0, 0%, 0%, 0.1);
   h1 {
@@ -27,7 +27,7 @@ header {
       .brandon-grotesque();
       .lower-case();
       font-size: @xSmallFont;
-      margin-right: @smallSpacer;
+      margin-right: @largeSpacer;
     }
   }
 }
